# fractalnetworks_gateway

./: .dockerignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Makefile  README.md  gateway.odg
.github/workflows/: build.yml
api/: gateway_0.1.0.yaml
client/: .gitlab-ci.yml  Cargo.toml
client/src/: lib.rs
integration/: Cargo.toml  Dockerfile  docker-compose.yml  local.env
integration/src/: main.rs
migrations/: 1633512493_initial.sql
proto/: gateway.proto
scripts/: entrypoint.sh  generate.sh  get-release-artifact.sh  rapidoc.html  state.json  state2.json
src/: api.rs  garbage.rs  gateway.rs  grpc.rs  lib.rs  main.rs  manager.rs  proto.rs  token.rs  types.rs  util.rs  watchdog.rs  websocket.rs  wireguard.rs
templates/: iptables.save.tera  nginx.conf.tera  sites.nginx.conf.tera
test/: apply.sh  generate.sh  network.json  networks_create.sh  ssltest.sh  state.json  state2.json  traffic.sh
