[package]
name = "gateway-client"
authors = ["Patrick M. Elsen <patrick@fractalnetworks.co>"]
description = "Gateway types"
license = "AGPL-3.0-only"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.38"
ipnet = { version = "2.3.0", features = ["serde", "schemars"] }
log = "0.4.14"
serde = { version = "1.0.124", features = ["derive"] }
thiserror = "1.0.30"
url = { version = "2.2.1", features = ["serde"] }
wireguard-keys = { version = "0.1", features = ["schema"] }
schemars = { version = "0.8.8", optional = true }
futures = "0.3.19"

[features]
default = []
schema = ["schemars", "wireguard-keys/schema"]
