[package]
name = "fractal-gateway"
authors = ["Patrick M. Elsen <patrick@fractalnetworks.co"]
license = "AGPL-3.0-only"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.17.0", features = ["process", "sync", "macros", "rt-multi-thread", "fs"] }
serde = { version = "1.0.136", features = ["derive"] }
anyhow = "1.0.55"
thiserror = "1.0.30"
ipnet = "2.3.1"
serde_json = "1.0.79"
structopt = "0.3.26"
env_logger = "0.9.0"
log = "0.4.14"
itertools = "0.10.3"
lazy_static = "1.4.0"
tera = "1.15.0"
futures = "0.3.21"
url = { version = "2.2.2", features = ["serde"] }
fractal-gateway-client = { path = "./client" }
networking-wrappers = { git = "https://gitlab.com/fractalnetworks/libraries/networking-wrappers", branch = "main" }
wireguard-keys = "0.1"
regex = "1.5.4"
event-types = { git = "https://gitlab.com/fractalnetworks/libraries/event-types", features = ["broadcast"], branch = "v0.1" }
base32 = "0.4.0"
async-tungstenite = { version = "0.16.1", features = ["tokio-rustls-native-certs"] }
humantime = "2.1.0"
rand = "0.8.5"

[features]
default = []

[workspace]
members = [".", "integration", "client"]
