[package]
name = "fractal-gateway"
authors = ["Patrick M. Elsen <patrick@fractalnetworks.co"]
license = "AGPL-3.0-only"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.20.0", features = ["process", "sync", "macros", "rt-multi-thread", "fs"] }
serde = { version = "1.0.139", features = ["derive"] }
anyhow = "1.0.58"
thiserror = "1.0.31"
ipnet = "2.5.0"
serde_json = "1.0.82"
structopt = "0.3.26"
env_logger = "0.9.0"
log = "0.4.17"
itertools = "0.10.3"
lazy_static = "1.4.0"
tera = "1.16.0"
futures = "0.3.21"
url = { version = "2.2.2", features = ["serde"] }
fractal-gateway-client = { path = "./client" }
fractal-networking-wrappers = "0.1"
wireguard-keys = "0.1.1"
regex = "1.6.0"
event-types = { git = "https://gitlab.com/fractalnetworks/libraries/event-types", features = ["broadcast"], branch = "v0.1" }
base32 = "0.4.0"
async-tungstenite = { version = "0.16.1", features = ["tokio-rustls-native-certs"] }
humantime = "2.1.0"
rand = "0.8.5"

[features]
default = []

[workspace]
members = [".", "integration", "client"]
