[package]
name = "fractal-gateway-client"
authors = ["Patrick M. Elsen <patrick@fractalnetworks.co>"]
description = "Gateway types"
license = "AGPL-3.0-only"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
ipnet = { version = "2.5.0", features = ["serde"] }
serde = { version = "1.0.139", features = ["derive"] }
thiserror = "1.0.31"
url = { version = "2.2.2", features = ["serde"] }
wireguard-keys = "0.1.1"
schemars = { version = "0.8.10", optional = true }

[features]
default = []
schema = ["schemars", "wireguard-keys/schema", "ipnet/schemars"]
