[package]
name = "fractal-gateway-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
env_logger = "0.9.0"
futures = "0.3.21"
gateway-client = { git = "https://gitlab.com/fractalnetworks/gateway-client" }
ipnet = "2.5.0"
log = "0.4.17"
networking-wrappers = { git = "https://gitlab.com/fractalnetworks/networking-wrappers", branch = "main" }
rand = "0.8.5"
serde_json = "1.0.81"
structopt = "0.3.26"
tokio = { version = "1.19.2", features = ["full"] }
tokio-tungstenite = "0.17.1"
wireguard-keys = "0.1.1"
